set a min height on hero and image to prevent text overlap

--- a/tbx/core/static_src/sass/components/_feature-image.scss
+++ b/tbx/core/static_src/sass/components/_feature-image.scss
@@ -19,7 +19,7 @@
 
   @media #{$tablet} {
     height: calc(100vh - 84px);
-    min-height: 600px;
+    min-height: 620px;
   }
 
   .initial-load & {
